<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.mq</groupId>
	<artifactId>iot_vaadin_web</artifactId>
	<name>iot.vaadin.web</name>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	

	<properties>
		<maven.compiler.source>13</maven.compiler.source>
		<maven.compiler.target>13</maven.compiler.target>

		<jacoco.version>0.8.4</jacoco.version>
		<surefire-plugin-version>2.19.1</surefire-plugin-version>
		<surefire-provider-version>1.0.1</surefire-provider-version>
		<mockito-version>2.25.0</mockito-version>

		<junit-platform-surefire-provider-version>1.0.1</junit-platform-surefire-provider-version>
		
		<junit-jupiter-version>5.5.1</junit-jupiter-version>
		<spring.version>5.0.4.RELEASE</spring.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<failOnMissingWebXml>false</failOnMissingWebXml>

		<!-- Dependencies -->
		<vaadin.version>10.0.0.beta6</vaadin.version>

		<!-- Plugins -->
		<jetty.version>9.4.20.v20190813</jetty.version>

		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
	</properties>

	<repositories>
		<repository>
			<id>vaadin-prereleases</id>
			<url>https://maven.vaadin.com/vaadin-prereleases</url>
		</repository>
		
		
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>vaadin-prereleases</id>
			<url>https://maven.vaadin.com/vaadin-prereleases</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<type>pom</type>
				<scope>import</scope>
				<version>${vaadin.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-core</artifactId>

		</dependency>
	
		<dependency>
			<groupId>de.mq</groupId>
			<artifactId>iot.application</artifactId>
			<version>0.0.1-SNAPSHOT</version>

		</dependency>


		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow</artifactId>


		</dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>flow-spring-addon</artifactId>


		</dependency>
		


		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-jupiter-version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter-version}</version>
			<scope>test</scope>
		</dependency>

		<!-- dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>${junit-launcher-version}</version>
			<scope>test</scope>
		</dependency-->


		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.vaadin/vaadin-spring -->


		<!-- Added to provide logging output as Flow uses -->
		<!-- the unbound SLF4J no-operation (NOP) logger implementation -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
	
		<finalName>iot-web</finalName>
		<plugins>
			<plugin>

				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven.war.plugin.version}</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin-version}</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>${junit-platform-surefire-provider-version}</version>
					</dependency>

				</dependencies>
			</plugin>


			<plugin>

				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<!-- version>0.7.4.201502262128</version -->

				<version>${jacoco.version}</version>



				<configuration>
					<excludes>
						<exclude>**/*DatabaseSetup.*</exclude>
					</excludes>


					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>


						</goals>

					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>package</phase>

						<goals>
							<goal>report</goal>

						</goals>

					</execution>

				</executions>


			</plugin>


			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty.version}</version>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>productionMode</id>
			<activation>
				<property>
					<name>vaadin.productionMode</name>
				</property>
			</activation>

			<properties>
				<transpilation.output>${project.build.directory}/build</transpilation.output>
			</properties>

			<dependencies>
				<dependency>
					<groupId>com.vaadin</groupId>
					<artifactId>flow-server-production-mode</artifactId>
				</dependency>
			</dependencies>

			<build>

				<plugins>


					<plugin>
						<groupId>com.vaadin</groupId>
						<artifactId>flow-maven-plugin</artifactId>
						<version>1.0.0.beta2</version>
						<executions>
							<execution>
								<goals>
									<goal>copy-production-files</goal>
									<goal>package-for-production</goal>
								</goals>
								<configuration>
									<transpileOutputDirectory>${transpilation.output}</transpileOutputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>${maven.war.plugin.version}</version>
						<configuration>
							<archive>
								<manifestEntries>
									<Implementation-Title>${project.name}</Implementation-Title>
									<Implementation-Version>${project.version}</Implementation-Version>
								</manifestEntries>
							</archive>
							<webResources>
								<resource>
									<directory>${transpilation.output}</directory>
								</resource>
							</webResources>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.eclipse.jetty</groupId>
						<artifactId>jetty-maven-plugin</artifactId>
						<version>${jetty.version}</version>
						<configuration>
							<webAppConfig>
								<resourceBases>
									<resourceBase>${transpilation.output}</resourceBase>
								</resourceBases>
							</webAppConfig>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>
</project>
